frontend/css/main.css
html,
body {
    padding: 0px;
    margin: 0px;
    font-family: sans-serif;
}

body {
    font-size: .875rem;
}

.feather {
    width: 16px;
    height: 16px;
    vertical-align: text-bottom;
}


/*
   * Sidebar
   */

.sidebar {
    position: fixed;
    top: 0;
    /* rtl:raw:
    right: 0;
    */
    bottom: 0;
    /* rtl:remove */
    left: 0;
    z-index: 100;
    /* Behind the navbar */
    padding-top: 48px;
    /* Height of navbar */
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

@media (max-width: 767.98px) {
    .sidebar {
        top: 5rem;
    }
}

.sidebar-sticky {
    position: relative;
    top: 0;
    height: calc(100vh - 48px);
    padding-top: .5rem;
    overflow-x: hidden;
    overflow-y: auto;
    /* Scrollable contents if viewport is shorter than content. */
}

.sidebar .nav-link {
    font-weight: 500;
    color: #333;
}

.sidebar .nav-link .feather {
    margin-right: 4px;
    color: #727272;
}

.sidebar .nav-link.active {
    color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
    color: inherit;
}

.sidebar-heading {
    font-size: .75rem;
    text-transform: uppercase;
}

.graph-display {
    border: 1px solid rgba(0, 0, 0, .1);
}

.graph-display, .graph-display svg {
    max-height: 800px;
}


/*
   * Navbar
   */

.navbar-brand {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: 1rem;
}

.navbar .navbar-toggler {
    top: .25rem;
    right: 1rem;
}

.navbar .form-control {
    padding: .75rem 1rem;
    border-width: 0;
    border-radius: 0;
}

.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, .1);
}

.form-control-dark:focus {
    border-color: transparent;
    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

.file-tree-header {
    border-bottom: 1px solid black;
    font-weight: bold;
    padding-bottom: 10px;
    margin-bottom: 10px;
}

.file-tree-header div {
    padding-top: 20px;
    padding-bottom: 10px;
}

.file-tree-header {
    padding-left: 10px;
}

.item-header {
    position: absolute;
    width: 100%;
    padding: 5px 10px;
    background-color: darkslategray;
    color: white;
    box-sizing: border-box;
}

.item-header>p {
    margin: 0px;
}

#file-tree-files {
    padding-left: 10px;
    /* TODO: Only disable double-click select */
    user-select: none;
    max-height: 400px;
    overflow: auto;
}

.tree-folder {
    margin-bottom: 5px;
    padding-left: 10px;
    margin-left: 10px;
    border-left: 1px dashed gray;
}

.tree-folder-item:hover,
.tree-folder-name:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.has-icon:before {
    content: "";
    background-repeat: no-repeat;
    width: 1.2em;
    height: 1.2em;
    margin-right: 5px;
    vertical-align: -0.2em;
    display: inline-block;
}

.collapsed {
    display: none;
}

.icon-folder-open:before {
    background: url("../../icons/folder-open.svg");
}

.icon-folder-closed:before {
    background: url("../../icons/folder-closed.svg");
}

.icon-header:before {
    background: url("../../icons/header-file.svg");
}

.icon-source:before {
    background: url("../../icons/cpp-file.svg");
}

.icon-file:before {
    background: url("../../icons/file.svg");
}

.tree-folder-name {
    padding-top: 2px;
    cursor: pointer;
}

.tree-folder-item {
    padding-top: 2px;
    cursor: pointer;
}

.highlighted {
    background-color: rgba(19, 138, 235, 0.3);
}

.tree-folder-item:hover,
.tree-folder-name:hover {
    background-color: rgba(19, 138, 235, 0.3);
}

.highlighted:hover {
    background-color: rgba(19, 138, 235, 0.5);
}

.file-not-found {
    display: none;
}

.hidden {
    display: none;
}

